--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -1,7 +1,7 @@
 // https://github.com/jgthms/minireset.css
 @import url(../fonts/pretendard/pretendard.css);
 $font-system: -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
-$font-family-sans-serif: Pretendard, #{$font-system};
+$font-family-sans-serif: 'GmarketSans', Pretendard, #{$font-system};
 *{font-family: $font-family-sans-serif; font-weight: 400;&:focus-visible{outline: none;} letter-spacing: -0.015em; line-height: 1.3; color: #212121;}
 blockquote, body, dd, dl, dt, fieldset, figure, h1, h2, h3, h4, h5, h6, hr, html, iframe, legend, li, ol, p, pre, textarea, ul {margin:0;padding:0}
 h1, h2, h3, h4, h5, h6 {font-size:100%;font-weight:600}
